force-app/main/default/objects/Billing__c/Billing__c.object-meta.xml
<CustomObject>
    <label>WMS Bill</label>
    <nameField>
        <displayFormat>BL-{000000}</displayFormat>
        <label>WMS BILL ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WMS Bill</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>