force-app/main/default/objects/Billing__c/fields/AdjustedAfterClosingBuying__c.field-meta.xml
<CustomField>
    <fullName>AdjustedAfterClosingBuying__c</fullName>
    <label>ADJUSTED AFTER CLOSING-BUYING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ADJUSTED_AFTER_CLOSING</valueSetName>
    </valueSet>
</CustomField>