force-app/main/default/objects/Billing__c/fields/AmountBuyingIncludeTAX__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludeTAX__c</fullName>
    <label>AMOUNT BUYING INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>