force-app/main/default/objects/Billing__c/fields/AmountBuyingIncludeTAXLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludeTAXLocal__c</fullName>
    <formula>TotalAmountOfBuyingLocal__c +  AmountOfTaxBuying__c</formula>
    <label>AMOUNT BUYING INCLUDE TAX(LOCAL)-old</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>