force-app/main/default/objects/Billing__c/fields/AmountBuyingIncludeTAXUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludeTAXUSD__c</fullName>
    <label>AMOUNT BUYING INCLUDE TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>