force-app/main/default/objects/Billing__c/fields/AmountBuyingIncludeTAXUSDCur__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingIncludeTAXUSDCur__c</fullName>
    <formula>TotalAmountOfBuyingUSD__c +  AmountOfTaxBuyingUSD__c</formula>
    <label>AMOUNT BUYING INCLUDE TAX(USD)-OLD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>