force-app/main/default/objects/Billing__c/fields/AmountOfTaxBuying__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxBuying__c</fullName>
    <label>AMOUNT OF TAX-BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>