force-app/main/default/objects/Billing__c/fields/AmountOfTaxBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxBuyingUSD__c</fullName>
    <label>AMOUNT OF TAX-BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>