force-app/main/default/objects/Billing__c/fields/AmountOfTaxSelling__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSelling__c</fullName>
    <label>AMOUNT OF TAX-SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>