force-app/main/default/objects/Billing__c/fields/AmountOfTaxSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountOfTaxSellingUSD__c</fullName>
    <label>AMOUNT OF TAX-SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>