force-app/main/default/objects/Billing__c/fields/AmountPaidBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidBuyingLocal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT PAID-BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>