force-app/main/default/objects/Billing__c/fields/AmountPaidBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidBuyingUSD__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT PAID-BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>