force-app/main/default/objects/Billing__c/fields/AmountReceivedFromCustomerLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountReceivedFromCustomerLocal__c</fullName>
    <defaultValue>0</defaultValue>
    <label>AMOUNT RECEIVED FROM CUSTOMER(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>