force-app/main/default/objects/Billing__c/fields/AmountSellingIncludeTAX__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingIncludeTAX__c</fullName>
    <label>AMOUNT SELLING INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>