force-app/main/default/objects/Billing__c/fields/AmountSellingIncludeTAXLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingIncludeTAXLocal__c</fullName>
    <formula>TotalAmountOfSellingLocal__c +  AmountOfTaxSelling__c</formula>
    <label>AMOUNT SELLING INCLUDE TAX(LOCAL)-OLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>