force-app/main/default/objects/Billing__c/fields/AmountSellingIncludeTAXUSD__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingIncludeTAXUSD__c</fullName>
    <label>AMOUNT SELLING INCLUDE TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>