force-app/main/default/objects/Billing__c/fields/AmountSellingIncludeTAXUSDCur__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingIncludeTAXUSDCur__c</fullName>
    <formula>TotalAmountOfSellingUSD__c +  AmountOfTaxSellingUSD__c</formula>
    <label>AMOUNT SELLING INCLUDE TAX(USD)-OLD</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>