force-app/main/default/objects/Billing__c/fields/ApplicantSelling__c.field-meta.xml
<CustomField>
    <fullName>ApplicantSelling__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APPLICANT-SELLING</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BillingApplicantSelling</relationshipName>
    <type>Lookup</type>
</CustomField>