force-app/main/default/objects/Billing__c/fields/BadDebtAging__c.field-meta.xml
<CustomField>
    <fullName>BadDebtAging__c</fullName>
    <formula>IF( AND( OR( UnreceivedBalanceLocal__c &gt; 0,  UnreceivedBalanceUSD__c &gt; 0), today() - CollectionDueDate__c &gt; 0) , today() - CollectionDueDate__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BAD DEBT AGING</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>