force-app/main/default/objects/Billing__c/fields/BadDebtCheckBox__c.field-meta.xml
<CustomField>
    <fullName>BadDebtCheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAD DEBT CHECKBOX</label>
    <type>Checkbox</type>
</CustomField>