force-app/main/default/objects/Billing__c/fields/BankAccountForReceiving__c.field-meta.xml
<CustomField>
    <fullName>BankAccountForReceiving__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT FOR RECEIVING</label>
    <referenceTo>BankAccount__c</referenceTo>
    <relationshipName>BillingBankAccountReceiving</relationshipName>
    <type>Lookup</type>
</CustomField>