force-app/main/default/objects/Billing__c/fields/BillingDisplayNo__c.field-meta.xml
<CustomField>
    <fullName>BillingDisplayNo__c</fullName>
    <label>BILLING DISPLAY NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>