force-app/main/default/objects/Billing__c/fields/BuyingVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>BuyingVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BUYING VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>WMSBuyingVATCreditAccountingcode</relationshipName>
    <type>Lookup</type>
</CustomField>