force-app/main/default/objects/Billing__c/fields/ChargeUnitFormula__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitFormula__c</fullName>
    <formula>IF(TEXT( Unit__c ) != NULL
, TEXT( Unit__c )
, TEXT(   PricingName__r.UNIT__c   )
)</formula>
    <label>Charge Unit-Formula</label>
    <type>Text</type>
</CustomField>