force-app/main/default/objects/Billing__c/fields/ChargeUnitinPrint__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitinPrint__c</fullName>
    <label>Charge Unit in Print</label>
    <length>100</length>
    <type>Text</type>
</CustomField>