force-app/main/default/objects/Billing__c/fields/ChargeUnitTotal__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnitTotal__c</fullName>
    <label>CHARGE UNIT(TOTAL)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>