force-app/main/default/objects/Billing__c/fields/ContainerrSizeFormula__c.field-meta.xml
<CustomField>
    <fullName>ContainerrSizeFormula__c</fullName>
    <formula>IF(TEXT( ContainerSize__c ) != NULL
, TEXT( ContainerSize__c )
, TEXT( PricingName__r.ContainerSize__c )
)</formula>
    <label>Container Size-Formula</label>
    <type>Text</type>
</CustomField>