force-app/main/default/objects/Billing__c/fields/ContainerSize__c.field-meta.xml
<CustomField>
    <fullName>ContainerSize__c</fullName>
    <label>Container Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ContainerType</valueSetName>
    </valueSet>
</CustomField>