force-app/main/default/objects/Billing__c/fields/ExchangeRateBuying__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateBuying__c</fullName>
    <label>EXCHANGE RATE-BUYING(CREDIT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>