force-app/main/default/objects/Billing__c/fields/ExchangeRateBuyingVAT__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateBuyingVAT__c</fullName>
    <label>EXCHANGE RATE-BUYING(VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>