force-app/main/default/objects/Billing__c/fields/ExchangeRateID__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EXCHANGE RATE ID-DEBIT/CREDIT</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MgmtMaster__c.Mgmt_Exrate_Validity__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.CreatedDate</field>
            <operation>greaterThan</operation>
            <valueField>MgmtMaster__c.Mgmt_Exrate_Start_Date__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.CreatedDate</field>
            <operation>lessThan</operation>
            <valueField>MgmtMaster__c.Mgmt_Exrate_End_Date__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MgmtMaster__c</referenceTo>
    <relationshipName>BILLING</relationshipName>
    <type>Lookup</type>
</CustomField>