force-app/main/default/objects/Billing__c/fields/ExchangeRateSellingVAT__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateSellingVAT__c</fullName>
    <label>EXCHANGE RATE-SELLING(VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>