force-app/main/default/objects/Billing__c/fields/ExchangeRequiredForSelling__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRequiredForSelling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EXCHANGE REQUIRED FOR SELLING</label>
    <type>Checkbox</type>
</CustomField>