force-app/main/default/objects/Billing__c/fields/InvoiceTo__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>INVOICE TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BillingInvoiceTo</relationshipName>
    <type>Lookup</type>
</CustomField>