force-app/main/default/objects/Billing__c/fields/PaymentConfirmedBuying__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmedBuying__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-BUYING</label>
    <type>Checkbox</type>
</CustomField>