force-app/main/default/objects/Billing__c/fields/PaymentTo__c.field-meta.xml
<CustomField>
    <fullName>PaymentTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYMENT TO</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>BillingPaymentTo</relationshipName>
    <type>Lookup</type>
</CustomField>