force-app/main/default/objects/Billing__c/fields/PeriodUnit__c.field-meta.xml
<CustomField>
    <fullName>PeriodUnit__c</fullName>
    <defaultValue>1</defaultValue>
    <label>PERIOD UNIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>