force-app/main/default/objects/Billing__c/fields/PricingName__c.field-meta.xml
<CustomField>
    <fullName>PricingName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PRICING NAME</label>
    <referenceTo>TariffMaster__c</referenceTo>
    <relationshipName>BillingPricing</relationshipName>
    <type>Lookup</type>
</CustomField>