force-app/main/default/objects/Billing__c/fields/PricingNameAtPrintENG__c.field-meta.xml
<CustomField>
    <fullName>PricingNameAtPrintENG__c</fullName>
    <label>PRICING NAME AT PRINT(ENG)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>