force-app/main/default/objects/Billing__c/fields/PricingNameAtPrintLocal__c.field-meta.xml
<CustomField>
    <fullName>PricingNameAtPrintLocal__c</fullName>
    <label>PRICING NAME AT PRINT(LOCAL)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>