force-app/main/default/objects/Billing__c/fields/ProfitIncludeTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitIncludeTaxLocal__c</fullName>
    <formula>AmountSellingIncludeTAX__c-AmountBuyingIncludeTAX__c</formula>
    <label>PROFIT INCLUDE TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>