force-app/main/default/objects/Billing__c/fields/ProfitRatioWithoutTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitRatioWithoutTaxLocal__c</fullName>
    <formula>ProfitWithoutTaxLocal__c  /  TotalAmountOfSellingLocal__c</formula>
    <label>PROFIT RATIO WITHOUT TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>