force-app/main/default/objects/Billing__c/fields/ProfitWithoutTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>ProfitWithoutTaxLocal__c</fullName>
    <formula>TotalAmountOfSellingLocal__c  -  TotalAmountOfBuyingLocal__c</formula>
    <label>PROFIT WITHOUT TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>