force-app/main/default/objects/Billing__c/fields/ReceiptanceNotesSelling__c.field-meta.xml
<CustomField>
    <fullName>ReceiptanceNotesSelling__c</fullName>
    <label>RECEIPTANCE NOTES-SELLING</label>
    <type>TextArea</type>
</CustomField>