force-app/main/default/objects/Billing__c/fields/ReceiptanceTypeSelling__c.field-meta.xml
<CustomField>
    <fullName>ReceiptanceTypeSelling__c</fullName>
    <label>RECEIPTANCE TYPE-SELLING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ReceiptancePaymentType</valueSetName>
    </valueSet>
</CustomField>