force-app/main/default/objects/Billing__c/fields/ReceiptSplitType__c.field-meta.xml
<CustomField>
    <fullName>ReceiptSplitType__c</fullName>
    <label>RECEIPT SPLIT TYPE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentSplitType</valueSetName>
    </valueSet>
</CustomField>