force-app/main/default/objects/Billing__c/fields/SellingDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>SellingDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>BILLING</relationshipName>
    <type>Lookup</type>
</CustomField>