force-app/main/default/objects/Billing__c/fields/SellingVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>SellingVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>WMSSellingVATCreditAccountingcode</relationshipName>
    <type>Lookup</type>
</CustomField>