force-app/main/default/objects/Billing__c/fields/SellingVATDebitAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>SellingVATDebitAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SELLING VAT DEBIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>WMSSellingVATDebitAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>