force-app/main/default/objects/Billing__c/fields/TAX__c.field-meta.xml
<CustomField>
    <fullName>TAX__c</fullName>
    <label>TAX</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TaxType</valueSetName>
    </valueSet>
</CustomField>