force-app/main/default/objects/Billing__c/fields/TaxRatioBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioBuying__c</fullName>
    <label>TAX RATE-BUYING</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>