force-app/main/default/objects/Billing__c/fields/TaxRatioSelling__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioSelling__c</fullName>
    <label>TAX RATE-SELLING</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>