force-app/main/default/objects/Billing__c/fields/TotalAmountOfBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingLocal__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>