force-app/main/default/objects/Billing__c/fields/TotalAmountOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfBuyingUSD__c</fullName>
    <label>TOTAL AMOUNT OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>