force-app/main/default/objects/Billing__c/fields/TotalAmountOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingLocal__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>