force-app/main/default/objects/Billing__c/fields/TotalAmountOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountOfSellingUSD__c</fullName>
    <label>TOTAL AMOUNT OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>