force-app/main/default/objects/Billing__c/fields/UnitPriceOfBuying__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuying__c</fullName>
    <label>UNIT PRICE OF BUYING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>