force-app/main/default/objects/Billing__c/fields/UnitPriceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfBuyingUSD__c</fullName>
    <label>UNIT PRICE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>