force-app/main/default/objects/Billing__c/fields/UnitPriceOfSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfSellingLocal__c</fullName>
    <label>UNIT PRICE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>