force-app/main/default/objects/Billing__c/fields/UnitPriceOfSellingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceOfSellingUSD__c</fullName>
    <label>UNIT PRICE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>