force-app/main/default/objects/Billing__c/fields/UnpaidBalanceOfBuyingUSD__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceOfBuyingUSD__c</fullName>
    <label>UNPAID BALANCE OF BUYING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>