force-app/main/default/objects/Billing__c/fields/UnreceivedBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceLocal__c</fullName>
    <label>UNRECEIVED BALANCE OF SELLING(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>