force-app/main/default/objects/Billing__c/fields/UnreceivedBalanceUSD__c.field-meta.xml
<CustomField>
    <fullName>UnreceivedBalanceUSD__c</fullName>
    <label>UNRECEIVED BALANCE OF SELLING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>