force-app/main/default/objects/Billing__c/fields/WorkOrderID__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderID__c</fullName>
    <label>WORK ORDER ID</label>
    <referenceTo>WorkOrder__c</referenceTo>
    <relationshipName>BILLING</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>