force-app/main/default/objects/Billing__c/fields/WorkOrderServiceID__c.field-meta.xml
<CustomField>
    <fullName>WorkOrderServiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WORK ORDER SERVICE ID</label>
    <referenceTo>WorkOrderService__c</referenceTo>
    <relationshipName>BillingWMS</relationshipName>
    <type>Lookup</type>
</CustomField>