force-app/main/default/objects/Billing__c/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <label>Standard Billing</label>
</RecordType>