force-app/main/default/objects/Billing__c/recordTypes/CombinedTransferBilling.recordType-meta.xml
<RecordType>
    <fullName>CombinedTransferBilling</fullName>
    <active>true</active>
    <label>Combined Transfer Billing</label>
</RecordType>