force-app/main/default/objects/Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>Customer__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PricingNameAtPrintLocal__c</columns>
    <columns>ChargeUnitTotal__c</columns>
    <columns>TAX__c</columns>
    <columns>InvoiceTo__c</columns>
    <columns>UnitPriceOfSellingLocal__c</columns>
    <columns>TotalAmountOfSellingLocal__c</columns>
    <columns>AmountSellingIncludeTAX__c</columns>
    <columns>PaymentTo__c</columns>
    <columns>UnitPriceOfBuying__c</columns>
    <columns>TotalAmountOfBuyingLocal__c</columns>
    <columns>AmountBuyingIncludeTAX__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All</label>
    <language>en_US</language>
</ListView>