force-app/main/default/objects/Billing__c/listViews/ReceivingProcessStandardID.listView-meta.xml
<ListView>
    <fullName>ReceivingProcessStandardID</fullName>
    <columns>WorkOrderID__c</columns>
    <columns>NAME</columns>
    <columns>InvoiceTo__c</columns>
    <columns>PricingNameAtPrintLocal__c</columns>
    <columns>ReceiptanceConfirmationSelling__c</columns>
    <columns>ApplicantSelling__c</columns>
    <columns>AmountSellingIncludeTAX__c</columns>
    <columns>AmountReceivedFromCustomerLocal__c</columns>
    <columns>UnreceivedBalanceLocal__c</columns>
    <columns>ReceiptanceTypeSelling__c</columns>
    <columns>ReceiptanceSettledDate__c</columns>
    <columns>ReceiptanceNotesSelling__c</columns>
    <columns>BankAccountForReceiving__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountSellingIncludeTAX__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UnreceivedBalanceLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing__c.Billing</value>
    </filters>
    <label>3.Receiving(S)Process-Standard(ID)</label>
    <language>en_US</language>
</ListView>