force-app/main/default/objects/Billing__c/listViews/VATExRateMassUpdate.listView-meta.xml
<ListView>
    <fullName>VATExRateMassUpdate</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>PricingNameAtPrintLocal__c</columns>
    <columns>ExchangeRateIDVAT__c</columns>
    <columns>ExchangeRateSellingVAT__c</columns>
    <columns>ExchangeRateSellingUpdate__c</columns>
    <columns>CurrencyConversionSelling__c</columns>
    <columns>ExchangeRateBuyingVAT__c</columns>
    <columns>ExchangeRateBuyingUpdate__c</columns>
    <columns>CurrencyConversionBuying__c</columns>
    <columns>UnitPriceOfSellingLocal__c</columns>
    <columns>UnitPriceOfSellingUSD__c</columns>
    <columns>UnitPriceOfBuying__c</columns>
    <columns>UnitPriceOfBuyingUSD__c</columns>
    <columns>SalesAccountedDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing__c.Billing</value>
    </filters>
    <label>5-1.VAT ExRate Mass Update</label>
    <language>en_US</language>
</ListView>