force-app/main/default/objects/Billing__c/listViews/X4_PayableBProcess_Standard_I.listView-meta.xml
<ListView>
    <fullName>X4_PayableBProcess_Standard_I</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>InvoiceTo__c</columns>
    <columns>PricingNameAtPrintLocal__c</columns>
    <columns>PaymentConfirmedBuying__c</columns>
    <columns>PaymentTo__c</columns>
    <columns>PaymentTypeBuying__c</columns>
    <columns>PaymentSettledDateBuying__c</columns>
    <columns>PaymentNotesBuying__c</columns>
    <columns>AmountBuyingIncludeTAX__c</columns>
    <columns>UnpaidBalanceOfBuyingLocal__c</columns>
    <columns>BeneficiaryBuying__c</columns>
    <columns>BankAccountForPayment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountBuyingIncludeTAX__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UnpaidBalanceOfBuyingLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing__c.Billing</value>
    </filters>
    <label>4.Payable(B) Process-Standard(ID)</label>
    <language>en_US</language>
</ListView>