force-app/main/default/objects/Billing__c/listViews/X5_ExRate_Mass_Update.listView-meta.xml
<ListView>
    <fullName>X5_ExRate_Mass_Update</fullName>
    <columns>NAME</columns>
    <columns>WorkOrderID__c</columns>
    <columns>ApplicantSelling__c</columns>
    <columns>PricingNameAtPrintENG__c</columns>
    <columns>PaymentTo__c</columns>
    <columns>PaymentTypeBuying__c</columns>
    <columns>ExchangeRateSelling__c</columns>
    <columns>ExchangeRateBuying__c</columns>
    <columns>ReceiptanceSettledDate__c</columns>
    <columns>PaymentSettledDateBuying__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Billing__c.Billing</value>
    </filters>
    <label>5.ExRate Mass Update</label>
    <language>en_US</language>
</ListView>